What's New
==========

This file summarizes OMNeT++ changes in each release. For changes related to
simulation model compatibility, see doc/API-Changes. For more detailed info
about all changes, see include/ChangeLog, src/*/ChangeLog, and ide/ChangeLog.

OMNeT++ 5.0 (February 2016)
---------------------------

Samples:

 - Removed google-earth demo in favor of the osg-earth sample.


OMNeT++ 5.0 beta 3 (December 2015)
----------------------------------

The highlights of this release are the experimental version of Qtenv (which is
a Qt-based runtime environment that will eventually replace Tkenv), support
for 3D graphics using OpenSceneGraph, and the addition of the much-requested
opp_featuretool utility. The full list follows:

Core:

 - Use of the omnetpp namespace was made permanent. The recommended way of
   porting models is to add the "using namespace omnetpp;" like to header
   files. To compile models without change, add -DAUTOIMPORT_OMNETPP_NAMESPACE
   to the compiler command line.

 - Added 3D graphics support via OpenSceneGraph. The 3D scene graph is to
   be built using the OpenSceneGraph API (e.g. loaded from file via osgDB::
   readNodeFile()), and then set onto a cOsgCanvas instance. 3D scene(s)
   can be visualized in the new Qtenv runtime GUI. (There is no 3D support
   in Tkenv, due to technical limitations.)

 - Added resolveResourcePath() to cEnvir and cComponent. The method searches
   a number of folders for a resource given with its file name or relative
   path, and returns the path for the first match. It can useful for locating
   various data files for models, OSG model files, and other files.

 - Visualization: added a method to the base class of modules and channels to
   serve as a container of visualization-related code. refreshDisplay() is
   invoked by graphical user interfaces (Qtenv, Tkenv) whenever GUI contents
   need to be refreshed. Display string updates, canvas figures maintenance,