@@ -32,7 +32,7 @@ class CarAnimator : public cSimpleModule
     protected:
         virtual void initialize() override;
         virtual void handleMessage(cMessage *msg) override;
-        void refresh();
+        virtual void refreshDisplay() const override;
 };
 
 Define_Module(CarAnimator);
@@ -66,12 +66,10 @@ void CarAnimator::initialize()
     WATCH(targetPointIndex);
     WATCH(distanceTravelled);
 
-    refresh();
-
     scheduleAt(simTime(), new cMessage());
 }
 
-void CarAnimator::refresh()
+void CarAnimator::refreshDisplay() const
 {
     cFigure::Transform t;
     t.rotate(heading);
@@ -116,7 +114,6 @@ void CarAnimator::handleMessage(cMessage *msg)
     loc.y += distance * sin(heading);
     antenna->rotate(-2*M_PI/180, 0, 0);
     distanceTravelled += distance;
-    refresh();
 
     scheduleAt(simTime() + timeStep, msg);
 }
