@@ -25,6 +25,7 @@ class QUEUEING_API Delay : public cSimpleModule
     protected:
         virtual void initialize() override;
         virtual void handleMessage(cMessage *msg) override;
+        virtual void refreshDisplay() const override;
 };
 
 }; //namespace
