@@ -29,6 +29,7 @@ class QUEUEING_API Join : public cSimpleModule
     protected:
         virtual void initialize() override;
         virtual void handleMessage(cMessage *msg) override;
+        virtual void refreshDisplay() const override;
 };
 
 }; // namespace
