@@ -43,6 +43,7 @@ class QUEUEING_API Queue : public cSimpleModule
     protected:
         virtual void initialize() override;
         virtual void handleMessage(cMessage *msg) override;
+        virtual void refreshDisplay() const override;
         virtual void finish() override;
 
         // hook functions to (re)define behaviour
